<?xml version="1.0" encoding="utf-8"?>


        
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/white"
    android:textColor="#000000">
    <ImageView
    	android:layout_width="fill_parent"
        android:layout_height="90dip"
    	android:src="@drawable/democratic_pizza"
    	android:layout_marginTop="10dip"
    />
      <RelativeLayout
  	  android:id="@+id/layout0"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip"
      >	    	
	    	<TextView android:text="@string/number_pizzas" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	
	    	android:id="@+id/number_pizzas" 
	    	android:layout_above="@+id/plus_toppings" 
	    	android:layout_alignParentLeft="true" 
	    	android:layout_marginTop="30dp"
	    	android:layout_marginLeft="70dp"></TextView>
	    	<Button
	        android:id="@+id/plus_pizzas"
	        android:layout_width="70dip"
	        android:layout_height="70dip"
	        android:layout_below="@+id/number_pizzas" 
	    	android:layout_alignLeft="@+id/number_pizzas"
	        android:text="+" />
	        <EditText android:id="@+id/edit_number_pizzas" 
	        android:layout_width="70dip" 
	        android:layout_height="70dip"
	    	android:layout_alignLeft="@+id/number_pizzas"
	        android:layout_below="@+id/plus_pizzas"
	        android:gravity="center"
	       	android:inputType="number"
	        android:text="1">
	        </EditText>
	        <Button
	        android:id="@+id/minus_pizzas"
	        android:layout_width="70dip"
	        android:layout_height="70dip"
	    	android:layout_alignLeft="@+id/number_pizzas"
	        android:layout_below="@+id/edit_number_pizzas"	        	   
	        android:text="-" />
	        
	        <TextView 
	    	android:text="@string/number_toppings" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
	    	android:textSize="15sp"
	    	android:id="@+id/number_toppings" 
	    	android:layout_alignParentTop="true"
	    	android:layout_marginTop="30dp" 	    	       
	    	android:layout_marginLeft="50dip"
	    	android:layout_toRightOf="@+id/number_pizzas">
	    	</TextView>
	        <Button
	        android:id="@+id/plus_toppings"
	        android:layout_width="70dip"
	        android:layout_height="70dip"	        
	        android:layout_below="@+id/number_toppings"	       
	    	android:layout_alignLeft="@+id/number_toppings"
	        android:text="+" />
	        <EditText android:id="@+id/edit_number_toppings" 
	        android:layout_width="70dip"
	        android:layout_height="70dip"         
	    	android:layout_alignLeft="@+id/number_toppings"
	        android:layout_below="@+id/plus_toppings" 
	        android:inputType="number"
	        android:text="3"
	        android:gravity="center">
	        </EditText>
	        <Button
	        android:id="@+id/minus_toppings"
	        android:layout_width="70dip"
	        android:layout_height="70dip"	       
	    	android:layout_alignLeft="@+id/number_toppings"
	        android:layout_below="@+id/edit_number_toppings" 
	        android:text="-" />
	    	
	    	<Button
	        android:id="@+id/pizza_voting"
	        android:layout_marginTop="150dip"
	        android:layout_marginLeft="60dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:text="Continue" />
	        
	        
	       <!--  <TextView
      	    android:id="@+id/number_toppings"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/number_toppings"
	    	/> -->



    </RelativeLayout>
    
    
    <LinearLayout
  	  android:id="@+id/layout1"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip"
      >    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/pizza_prompt1"
	    />
	    <Spinner 
	        android:id="@+id/choice1"
	        android:layout_width="fill_parent"
	        android:layout_height="50dip"
	        android:prompt="@string/pizza_empty"
	    />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/pizza_prompt2"
	    />
	    <Spinner 
	        android:id="@+id/choice2"
	        android:layout_width="fill_parent"
	        android:layout_height="50dip"
	        android:prompt="@string/pizza_empty"
	    />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/pizza_prompt3"
	    />
	    <Spinner 
	        android:id="@+id/choice3"
	        android:layout_width="fill_parent"
	        android:layout_height="50dip"
	        android:prompt="@string/pizza_empty"
	    />
	
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dip"
	        android:text="@string/pizza_prompt4"
	    />
	    <Spinner 
	        android:id="@+id/choice_dead_last"
	        android:layout_width="fill_parent"
	        android:layout_height="50dip"
	        android:prompt="@string/pizza_empty"
	    />
	    
	    <LinearLayout
	      android:orientation="horizontal"
	      android:layout_width="fill_parent"
	      android:layout_height="fill_parent"
	      android:layout_marginTop = "10dip"
	      android:layout_weight="1" android:weightSum="1">      
		    <Button
		        android:id="@+id/cont"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:text="Add vote" />
		    <Button
		        android:id="@+id/done"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:layout_marginLeft="10dip"
		        android:text="Done" />
	  </LinearLayout>
   </LinearLayout>
   
    <RelativeLayout
  	  android:id="@+id/layout2"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip"
      >   
      	    <TextView
      	    android:id="@+id/pizza_congratulations"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	    	/>
	    	
	    	<Button
	        android:id="@+id/home"
	        android:layout_marginTop="150dip"
	        android:layout_marginLeft="60dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:text="One more!" />
    </RelativeLayout>
</LinearLayout>


